--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>0.1</version>
 
     <properties>
-        <ver.scala>2.11.8</ver.scala>
+        <ver.scala>2.12.8</ver.scala>
     </properties>
 
     <build>
@@ -46,7 +46,7 @@
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>3.4.4</version>
                 <executions>
                     <execution>
                         <id>compile-scala</id>
@@ -67,14 +67,14 @@
                     <args>
                         <arg>-feature</arg>
                     </args>
-                    <scalaCompatVersion>2.11</scalaCompatVersion>
+                    <scalaCompatVersion>2.12</scalaCompatVersion>
                     <ccTestGoals>scatatest:test</ccTestGoals>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.scalatest</groupId>
                 <artifactId>scalatest-maven-plugin</artifactId>
-                <version>1.0</version>
+                <version>2.0.0</version>
                 <configuration>
                     <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                     <junitxml>.</junitxml>
@@ -107,13 +107,13 @@
         </dependency>
         <dependency>
             <groupId>org.scalatest</groupId>
-            <artifactId>scalatest_2.11</artifactId>
-            <version>3.0.5</version>
+            <artifactId>scalatest_2.12</artifactId>
+            <version>3.2.0-SNAP9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.scalamock</groupId>
-            <artifactId>scalamock_2.11</artifactId>
+            <artifactId>scalamock_2.12</artifactId>
             <version>4.1.0</version>
             <scope>test</scope>
         </dependency>
